--- a/src/app/scanner/scanner.page.html
+++ b/src/app/scanner/scanner.page.html
@@ -15,5 +15,5 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-button color="primary" (click)="scan()">Scan</ion-button>
+  <ion-button color="primary" (click)="scanCode()">Scan</ion-button>
 </ion-content>
