--- a/src/app/Auth/login/login.page.html
+++ b/src/app/Auth/login/login.page.html
@@ -1,9 +1,25 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <div class="bgstack">
+
+  </div>
+  <div class="ion-padding">
+    <div class="ion-padding">
+        <h1><b>Hello There.</b></h1>
+        <p>Login or signup to continue</p>
+        <br>
+        <br>
+        <br>
+    </div>
+    <div class="ion-padding shadow bg-white">
+        <ion-input placeholder="Username"></ion-input>
+        <ion-input placeholder="Password"></ion-input>
+    </div>
+        <br>
+    <div align="center">
+        <ion-button expand="block" fill="outline">Login</ion-button>
+        <br>
+        <a>Forgotten Password?</a>
+    </div>
+  </div>
 
 </ion-content>
