--- a/src/app/Auth/login/login.page.html
+++ b/src/app/Auth/login/login.page.html
@@ -1,3 +1,4 @@
+<html class="ios">
 <ion-content>
   <div class="bgstack">
 
@@ -16,10 +17,11 @@
     </div>
         <br>
     <div align="center">
-        <ion-button expand="block" fill="outline">Login</ion-button>
+        <ion-button href="/home" expand="block" fill="outline">Login</ion-button>
         <br>
         <a>Forgotten Password?</a>
     </div>
   </div>
 
 </ion-content>
+</html>
