--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,47 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<html class="ios">
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <div class="bgstack">
+  </div>
+  <div class="ion-padding" align="center">
+      <div class="ion-padding" align="center">
+          <div class="circle" style="background-image: url(../assets/images/profile-picture.jpg)"></div>
+          <h3><b>M. Rezky Sulihin</b></h3>
+          <p class="role">Anggota Angkatan 11</p>
+      </div>
+      <ion-row>
+          <ion-col class="box shadow" >
+            <div class="ion-padding" align="center">
+                <ion-icon name="book"></ion-icon>
+                <h1 class="title">Materi</h1>
+            </div>
+          </ion-col>
+          <ion-col class="box shadow" >
+              <div class="ion-padding" align="center">
+                  <ion-icon name="card"></ion-icon>
+                  <h1 class="title">Kartu Anggota</h1>
+              </div>
+          </ion-col>
+      </ion-row>
+      <ion-row>
+          <ion-col class="box shadow" >
+              <div class="ion-padding" align="center">
+                  <ion-icon name="clipboard"></ion-icon>
+                  <h1 class="title">Absen</h1>
+              </div>
+          </ion-col>
+          <ion-col class="box shadow" >
+              <div class="ion-padding" align="center">
+                  <ion-icon name="paper"></ion-icon>
+                  <h1 class="title">Berita</h1>
+              </div>
+          </ion-col>
+      </ion-row>
+  </div>
+  <!-- <div class="footer" align="center">
+    <p>Smekti Nircable Community | mrezkys</p>
+  </div> -->
+  <div class="ilust">
+    <img src="../assets/images/ilustration1.png" alt="">
   </div>
 </ion-content>
+</html>
