--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,74 @@
 
+.bgstack{
+    background: rgb(76,156,245);
+    background: linear-gradient(120deg, rgb(57, 149, 255) 0%, rgb(105, 208, 255) 100%);
+    width: 100%;
+    height: 40%;
+    margin-bottom: -75%;
+}
+
+h3{
+    color: white;
+    font-family: sans-serif;
+    margin-bottom: 0;
+    margin-top: 10px;
+}
+
+.role{
+    color: white;
+    margin: 0;
+    font-size: 14px;
+}
+
+.circle{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-size: cover;
+    margin-top: 10px;
+    border: 5px solid white;
+}
+
+.box{
+    background-color: #ffffff;
+    border-radius: 5px;
+    width: 100%;
+    height: 140px;
+    margin: 10px;
+}
+
+.shadow{
+    box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.17);
+
+}
+
+.footer{
+    position: relative;
+    bottom: 10px;
+}
+
+.footer p{
+    color: #9c9c9c;
+}
+
+.ilust{
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
+}
+
+.ilust img{
+    width: auto;
+    height: auto;
+}
+
+ion-icon{
+    font-size: 64px;
+    color: rgb(76,156,245);
+}
+
+.title{
+    color: rgb(76,156,245);
+    margin: 0;
+    font-size: 18px;
+}
