update berita feature

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,7 +29,7 @@
                   <h1 class="title">Absen</h1>
               </div>
           </ion-col>
-          <ion-col class="box shadow" >
+          <ion-col (click)="berita()" class="box shadow" >
               <div class="ion-padding" align="center">
                   <ion-icon name="paper"></ion-icon>
                   <h1 class="title">Berita</h1>
